--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,40 @@
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
+    <style>
+    body {
+        font-family: 'Allan';font-size: 22px;
+    }
+    </style>
+    
   </head>
   <body>
+<header>
     <div id="root">
-      <h1>Hello world!</h1>
+      <h1>Hello people!</h1>
+
     </div>
+</header>
+
+<section>
+    <div id="codificar">
+      <h3><strong>Insira seu texto para codificar</strong></h3>
+    </div>
+
+
+  <div id="decodificar">
+    <h3><strong>Insira seu texto para decodificar</strong></h3>
+
+
+  </div>
+  </section>
+
+  <footer>
+   <hr> Feito com muito carinho para os fãs
+  </footer>
+
     <script src="index.js" type="module"></script>
   </body>
 </html>
