--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,19 @@
     <main>
       <div class="encoder">
         <div class="bmo">   
-                
+
           <!-- Caixa principal onde ocorrerá o diálogo --> 
           <form action="" name="" id="">      
-            <textarea name="" id="" cols="43" rows="15"></textarea>
+            <textarea name="" id="myText" cols="43" rows="15" placeholder="Bip Bop... Hey Humanooo! Digite algo para eu fazer converter"></textarea>
             <div class="BgControl">
               <div class="btns">
-                  <button class="Encrypt" type="submit" onclick="criptar(this)">Encrypt</button>
-                  <button class="Decrypt" type="submit" onclick="descriptar(this)">Decrypt</button>
+                  <button class="Encrypt" type="submit" id="crip">Encrypt</button>
+                  <button class="Decrypt" type="submit" id="decrip">Decrypt</button>
               </div>
 
               <!-- Dropdown -->
               <div class="btns2">
-                <select name="selector" id="choice" >
+                <select name="selector" id="choose">
                   <option value="choice" > Choose </option>
                   <option value="1">1</option>
                   <option value="2">2</option>
