--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 
           <!-- Caixa principal onde ocorrerá o diálogo --> 
           <form action="" name="" id="">      
-            <textarea name="" id="myText" cols="43" rows="15" placeholder="Bip Bop... Hey Humanooo! Digite algo para eu fazer converter"></textarea>
+            <textarea name="" id="myText" placeholder="Bip Bop... Hey Humanooo! Digite algo para eu fazer converter"></textarea>
             <div class="BgControl">
               <div class="btns">
                   <button class="Encrypt" type="submit" id="crip">Encrypt</button>
                   <button class="Decrypt" type="submit" id="decrip">Decrypt</button>
               </div>
+
+              
 
               <!-- Dropdown -->
               <div class="btns2">
